src/plugins/sfdisk/sfdiskpartitiontable.cpp
@@ -58,7 +58,7 @@ bool SfdiskPartitionTable::commit(quint32 timeout)
 
     ExternalCommand(QStringLiteral("udevadm"), { QStringLiteral("settle"), QStringLiteral("--timeout=") + QString::number(timeout) }).run();
     ExternalCommand(QStringLiteral("partx"), { QStringLiteral("--update"), m_device->deviceNode() }).run();
-    ExternalCommand(QStringLiteral("udevadm"), { QStringLiteral("trigger") }).run();
+    ExternalCommand(QStringLiteral("udevadm"), { QStringLiteral("trigger"), QStringLiteral("--subsystem-match=block") }).run();
 
     if (m_device->type() == Device::Type::SoftwareRAID_Device)
         ExternalCommand(QStringLiteral("udevadm"), { QStringLiteral("control"), QStringLiteral("--start-exec-queue") }).run();
